# code-wars

./: README.md
C++/Backspaces in string/src/: main.cpp
C++/Beeramid/: kata
C++/Beeramid/src/: main.cpp
C++/Boggle Word Checker/: CMakeLists.txt  Q.txt
C++/Boggle Word Checker/src/: Boggle.h  CMakeLists.txt  main.cpp
C++/Connect Four/: kata
C++/Connect Four/src/: main.cpp
C++/Convert string to camel case/src/: main.cpp
C++/Does my number look big in this/src/: main.cpp
C++/Factorial decomposition/: CMakeLists.txt  Q.txt  main.cpp
C++/Growth of a Population/src/: main.cpp
C++/Highest and Lowest/src/: a.out  main  main.cpp
C++/How many numbers III?/: CMakeLists.txt  Q.txt
C++/How many numbers III?/src/: main.cpp
C++/Irreducible Sum of Rationals/: q.txt
C++/Is a number prime/src/: main.cpp
C++/Josephus Survivor/: CMakeLists.txt  Q.txt  main.cpp
C++/Largest 5 digit number in a series/src/: main.cpp
C++/Maximum subarray sum/: CMakeLists.txt  Q.txt  main.cpp
C++/Mexican Wave/src/: main.cpp
C++/My smallest code interpreter (aka Brainf**k)/: CMakeLists.txt
C++/My smallest code interpreter (aka Brainf**k)/src/: main.cpp
C++/Pascal's Triangle/src/: main.cpp
C++/Permutations/: CMakeLists.txt  Q.txt
C++/Permutations/src/: main.cpp
C++/Rectangle into Squares/src/: main.cpp
C++/RotateImage/: CMakeLists.txt
C++/RotateImage/src/: ImageRotate.h  main.cpp
C++/RotateImage/tests/: CMakeLists.txt  TestUtil.h  test.cpp
C++/RotateImageInPlace/: CMakeLists.txt
C++/RotateImageInPlace/src/: CMakeLists.txt  ImageRotate.cpp  ImageRotate.h  main.cpp
C++/RotateImageInPlace/tests/: CMakeLists.txt  RandomRotateImageTests.cpp  RotateImageTests.cpp  TestUtil.h  TestUtilTests.cpp  test.cpp
C++/Simple Encryption #1 - Alternating Split/: kata
C++/Simple Encryption #1 - Alternating Split/src/: main.cpp
C++/Simple Pig Latin/: kata
C++/Simple Pig Latin/src/: main.cpp
C++/Stop gninnipS My sdroW!/src/: main.cpp
C++/Strings Mix/: CMakeLists.txt  Q.txt
C++/Strings Mix/src/: main.cpp
C++/Sum Strings as Numbers/: CMakeLists.txt  main.cpp
C++/Sum of Intervals/: CMakeLists.txt  Q.txt  main.cpp
C++/Tank Truck/: CMakeLists.txt  Q.txt
C++/Tank Truck/src/: main.cpp
C++/Valid Brackets/src/: a.out  main.cpp
C++/Weight for weigh/src/: main.cpp
C++/Who likes it/src/: main.cpp
C++/parseInt() reloaded/: CMakeLists.txt
C++/parseInt() reloaded/include/: parse_int.h
C++/parseInt() reloaded/src/: CMakeLists.txt  main.cpp  parse_int.cpp
C++/parseInt() reloaded/tests/: CMakeLists.txt  EmptyInput.cpp  FixedNums.cpp  Fixed_Nums.cpp  InvalidChars.cpp  RemoveAnd.cpp  TestUtil.h
Java/Complementary DNA/src/: DnaStrand.java
Java/Delete occurrences of an element if it occurs more than n times/src/: EnoughIsEnough.java
Java/Digital Root/src/: DRoot.java
Java/Factorial/src/: Factorial.java
Java/Find the odd int/src/: FindOdd.java
Java/Find the unique number/src/: Kata.java
Java/Greed is Good/src/: Greed.java
Java/Multi-Tap Input/: readme.md
Java/Multi-Tap Input/src/: Keypad.java
Java/Vasya - Clerk/src/: Line.java
